Ensure s3 files are cloned when copy / exporting